--- a/model/haskell/grammar.tex
+++ b/model/haskell/grammar.tex
@@ -7,7 +7,7 @@
 
 && \expwrongs{\vartyh}{\formvar{string}} $|$ \exphm{\vartyh}{\varexpm} $|$ \exphs{\vartyh}{\varexps} \\
 
-$v^h$ & $=$ & $\lambda \varvarh:t.\varexph$ $|$ $\Lambda \varvarh.\varexph$ $|$ $\expnum{n}$ $|$ $\mathtt{nil}$ $\vartyh$ $|$ $\mathtt{cons}$ $\varexph$ $\varexph$ $|$ $\mathtt{hs}$ $\tylump$ $v^s$ $|$ $\mathtt{hs}$ $(\forall \varvarh.\vartyh)$ $v^s$ \\
+\varvaluh & $=$ & \expfabss{\varvarh}{\vartyh}{\varexph} $|$ \exptabs{\tyvarh}{\varexph} $|$ \expnum{\varnum} $|$ \expnils{\vartyh} $|$ \expcons{\varexph}{\varexph} $|$ \exphs{\tylump}{\varvalus} $|$ \exphs{(\tyfor{\tyvarh}{\vartyh})}{\varvalus} \\
 
 \vartyh & $=$ & \tylump $|$ \tynum $|$ \tyvarh $|$ \tylist{\tyvarh} $|$ \tylabel{\vartyh}{\tyvarh} $|$ \tyfun{\vartyh}{\vartyh} $|$ \tyfor{\tyvarh}{\vartyh} \\
 
