--- a/model/haskell/operational-semantics/ml.tex
+++ b/model/haskell/operational-semantics/ml.tex
@@ -23,8 +23,8 @@
 % hm [t] (nil t)
 
 \redruleh
-{\exphm{\tylist{\vartyh}}{(\expnil{\vartym})}}
-{\expnil{\vartyh}} \\
+{\exphm{\tylist{\vartyh}}{(\expnils{\vartym})}}
+{\expnils{\vartyh}} \\
 
 % hm [t] (cons v v)
 
@@ -35,8 +35,8 @@
 % hm (t->t) (\x:t.e)
 
 \redruleh
-{\exphm{(\tyfun{\first{\vartyh}}{\second{\vartyh}})}{(\expfabs{\varvarm}{\first{\vartym}}{\varexpm})}}
-{\expfabs{\varvarh}{\first{\vartyh}}{\exphm{\second{\vartyh}}{\expfapp{((\expfabs{\varvarm}{\first{\vartym}}{\varexpm})}{(\expmh{\first{\vartym}}{\varvarh})})}}} \\
+{\exphm{(\tyfun{\first{\vartyh}}{\second{\vartyh}})}{(\expfabss{\varvarm}{\first{\vartym}}{\varexpm})}}
+{\expfabss{\varvarh}{\first{\vartyh}}{\exphm{\second{\vartyh}}{\expfapp{((\expfabss{\varvarm}{\first{\vartym}}{\varexpm})}{(\expmh{\first{\vartym}}{\varvarh})})}}} \\
 
 % hm (Ax.t) (\\x.e)
 
