--- a/model/haskell/typing-rules.tex
+++ b/model/haskell/typing-rules.tex
@@ -41,7 +41,7 @@
 % Function abstraction
 \frac
 {\judth{}{\first{\vartyh}} \quad \judeh{\envexte{\varvarh}{\first{\vartyh}}}{\varexph}{\second{\vartyh}}}
-{\judeh{\env}{(\expfabs{\varvarh}{\first{\vartyh}}{\varexph})}{\tyfor{\first{\vartyh}}{\second{\vartyh}}}}
+{\judeh{\env}{(\expfabss{\varvarh}{\first{\vartyh}}{\varexph})}{\tyfor{\first{\vartyh}}{\second{\vartyh}}}}
 \quad
 % Type abstraction
 \frac
@@ -57,7 +57,7 @@
 % Nil
 \frac
 {\judeh{\env}{\vartyh}}
-{\judeh{\env}{\expnil{\vartyh}}{\tylist{\vartyh}}}
+{\judeh{\env}{\expnils{\vartyh}}{\tylist{\vartyh}}}
 \quad
 % Cons
 \frac
