--- a/model/haskell/operational-semantics/haskell.tex
+++ b/model/haskell/operational-semantics/haskell.tex
@@ -84,7 +84,7 @@ $(\varnum \neq 0)$ \\
 % Wrong
 
 \redrule
-{\redenvh{\expwrongs{\vartyh}{\formvar{string}}}}
+{\redconh{\expwrongs{\vartyh}{\formvar{string}}}}
 {\experr{\varstr}}
 
 \end{tabular}
