--- a/model/haskell/operational-semantics/scheme.tex
+++ b/model/haskell/operational-semantics/scheme.tex
@@ -56,7 +56,9 @@
 
 \redruleh
 {\exphs{(\tyfun{\first{\vartyh}}{\second{\vartyh}})}{\varvalus}}
-{\expwrongs{\tyunlabh{(\tyfun{\first{\vartyh}}{\second{\vartyh}})}}{\str{Not \; a \; function}}} $(\varvalus \neq \expfabsd{\varvars}{\varexps})$ \\
+{\expwrongs{\tyunlabh{(\tyfun{\first{\vartyh}}{\second{\vartyh}})}}{\str{Not \; a \; function}}} \\
+
+\redsp $(\varvalus \neq \expfabsd{\varvars}{\varexps})$ \\
 
 % (hs (Ax.t) v) {t}
 
