Changed unforced eval cxt symbol to 'U'. Changed forced eval cxt symbol to 'E'. Changed Haskell's eval cxt to forced symbol. Changed meta eval cxt to forced symbol. Changed HM and HS inner eval cxts to forced.

--- a/macros.tex
+++ b/macros.tex
@@ -2,8 +2,8 @@
 
 \newcommand{\symadd}{+}
 \newcommand{\symcons}{cons}
-\newcommand{\symconu}{E}
-\newcommand{\symconf}{F}
+\newcommand{\symconu}{U}
+\newcommand{\symconf}{E}
 \newcommand{\symenv}{\Gamma}
 \newcommand{\symexp}{e}
 \newcommand{\symext}{,}
@@ -70,12 +70,12 @@
 \newcommand{\vartyh}{\ensuremath{\symtype\langh}\xspace}
 \newcommand{\vartym}{\ensuremath{\symtype\langm}\xspace}
 \newcommand{\vartys}{\ensuremath{\symtype\langs}\xspace}
-\newcommand{\varconm}{\ensuremath{\mathscr{\symconu}\xspace}}
-\newcommand{\varconuh}{\ensuremath{\symconu\langh}\xspace}
-\newcommand{\varconum}{\ensuremath{\symconu\langm}\xspace}
-\newcommand{\varconus}{\ensuremath{\symconu\langs}\xspace}
+\newcommand{\varconm}{\ensuremath{\mathscr{\symconf}\xspace}}
+\newcommand{\varconfh}{\ensuremath{\symconf\langh}\xspace}
 \newcommand{\varconfm}{\ensuremath{\symconf\langm}\xspace}
 \newcommand{\varconfs}{\ensuremath{\symconf\langs}\xspace}
+\newcommand{\varconum}{\ensuremath{\symconu\langm}\xspace}
+\newcommand{\varconus}{\ensuremath{\symconu\langs}\xspace}
 \newcommand{\varstr}{\ensuremath{\formvar{\symstr}}\xspace}
 
 % Expressions
