--- a/model/haskell/grammar.tex
+++ b/model/haskell/grammar.tex
@@ -15,9 +15,9 @@
 
 \formvar{\symfield} & $=$ & \formsym{\symhd} $|$ \formsym{\symtl} \\
 
-\varconuh & $=$ & \symholeh $|$ \expfapp{\varconuh}{\varexph} $|$ \exptapp{\varconuh}{\vartyh} $|$ \expfix{\varconuh} $|$ \expop{\varconuh}{\varexph} $|$ \expop{\varvaluh}{\varconuh} $|$ \expif{\varconuh}{\varexph}{\varexph} \\
+\varconfh & $=$ & \symholeh $|$ \expfapp{\varconfh}{\varexph} $|$ \exptapp{\varconfh}{\vartyh} $|$ \expfix{\varconfh} $|$ \expop{\varconfh}{\varexph} $|$ \expop{\varvaluh}{\varconfh} $|$ \expif{\varconfh}{\varexph}{\varexph} \\
 
-&& \expfield{\varconuh} $|$ \expnull{\varconuh} $|$ \exphm{\vartyh}{\varconum} $|$ \exphs{\vartyh}{\varconus}
+&& \expfield{\varconfh} $|$ \expnull{\varconfh} $|$ \exphm{\vartyh}{\varconfm} $|$ \exphs{\vartyh}{\varconfs}
 
 \end{tabular}
 \caption{Haskell grammar and evaluation contexts}
