Revised the ML grammar to use the macros.

--- a/model/haskell/grammar.tex
+++ b/model/haskell/grammar.tex
@@ -9,7 +9,7 @@
 
 \varvaluh & $=$ & \expfabss{\varvarh}{\vartyh}{\varexph} $|$ \exptabs{\tyvarh}{\varexph} $|$ \expnum{\varnum} $|$ \expnils{\vartyh} $|$ \expcons{\varexph}{\varexph} $|$ \exphs{\tylump}{\varvalus} $|$ \exphs{(\tyfor{\tyvarh}{\vartyh})}{\varvalus} \\
 
-\vartyh & $=$ & \tylump $|$ \tynum $|$ \tyvarh $|$ \tylist{\tyvarh} $|$ \tylabel{\vartyh}{\tyvarh} $|$ \tyfun{\vartyh}{\vartyh} $|$ \tyfor{\tyvarh}{\vartyh} \\
+\vartyh & $=$ & \tylump $|$ \tynum $|$ \tyvarh $|$ \tylist{\vartyh} $|$ \tylabel{\vartyh}{\tyvarh} $|$ \tyfun{\vartyh}{\vartyh} $|$ \tyfor{\tyvarh}{\vartyh} \\
 
 \formvar{\symop} & $=$ & \formsym{\symadd} $|$ \formsym{\symsub} \\
 
