Removed an unneeded pipe from the ML grammar. Not in Haskell grammar.

--- a/model/ml/grammar.tex
+++ b/model/ml/grammar.tex
@@ -24,7 +24,7 @@
 
 && \expif{\varconfm}{\varexpm}{\varexpm} $|$ \expcons{\varconum}{\varexpm} $|$ \expcons{\varvalum}{\varconum} $|$ \expfield{\varconfm} $|$ \expnull{\varconfm} \\
 
-&& $|$ \expms{\vartym}{\varconfs}
+&& \expms{\vartym}{\varconfs}
 
 \end{tabular}
 \caption{ML grammar and evaluation contexts}
