Revised the MS op sem to use the macros.

--- a/macros.tex
+++ b/macros.tex
@@ -122,7 +122,7 @@
 \newcommand{\tysubst}[3]{\ensuremath{\subst{#1}{#2}{#3}}}
 \newcommand{\tyunlab}[3]{\ensuremath{\tysubst{#1}{\ith{#2}}{\tylabel{\ith{#2}}{#3}}}\xspace}
 \newcommand{\tyunlabh}[1]{\ensuremath{\tyunlab{#1}{\vartyh}{\tyvarh}}\xspace}
-\newcommand{\tyunlabm}[1]{\ensuremath{\tyunlab{#1}{\vartym}{\tyvarh}}\xspace}
+\newcommand{\tyunlabm}[1]{\ensuremath{\tyunlab{#1}{\vartym}{\tyvarm}}\xspace}
 \newcommand{\tytst}{\ensuremath{\formsym{\symtst}}\xspace}
 
 % Typing rules
