--- a/macros.tex
+++ b/macros.tex
@@ -31,9 +31,13 @@
 \newcommand{\symms}{ms}
 \newcommand{\symnat}{N}
 \newcommand{\symnil}{nil}
-\newcommand{\symnull}{null?}
+\newcommand{\sympnull}{null?}
 \newcommand{\symnum}{n}
 \newcommand{\symop}{o}
+\newcommand{\sympred}{p}
+\newcommand{\sympfun}{fun?}
+\newcommand{\symplist}{list?}
+\newcommand{\sympnum}{num?}
 \newcommand{\symred}{\rightarrow}
 \newcommand{\symsh}{sh}
 \newcommand{\symsm}{sm}
@@ -85,19 +89,23 @@
 \newcommand{\exptabs}[2]{\ensuremath{\Lambda #1 . #2}}
 \newcommand{\expnum}[1]{\ensuremath{\formnum{#1}}}
 \newcommand{\expnils}[1]{\ensuremath{\formsym{\symnil} \; #1}}
-\newcommand{\expnild}{\ensuremath{\formsym{\symnil}}}
+\newcommand{\expnild}{\ensuremath{\formsym{\symnil}}\xspace}
 \newcommand{\expcons}[2]{\ensuremath{\formsym{\symcons} \; #1 \; #2}}
 \newcommand{\expfapp}[2]{\ensuremath{#1 \; #2}}
 \newcommand{\exptapp}[2]{\ensuremath{#1 \; \lbrace #2 \rbrace}}
 \newcommand{\expfix}[1]{\ensuremath{\formsym{\symfix} \; #1}}
 \newcommand{\expop}[2]{\ensuremath{\formvar{\symop} \; #1 \; #2}}
+\newcommand{\exppred}[1]{\ensuremath{\formvar{\sympred} \; #1}}
+\newcommand{\expplist}[1]{\ensuremath{\formsym{\symplist} \; #1}}
+\newcommand{\exppfun}[1]{\ensuremath{\formsym{\sympfun} \; #1}}
+\newcommand{\exppnum}[1]{\ensuremath{\formsym{\sympnum} \; #1}}
 \newcommand{\expadd}[2]{\ensuremath{\formsym{\symadd} \; #1 \; #2}}
 \newcommand{\expsub}[2]{\ensuremath{\formsym{\symsub} \; #1 \; #2}}
 \newcommand{\expif}[3]{\ensuremath{\formsym{\symif} \; #1 \; #2 \; #3}}
 \newcommand{\expfield}[1]{\ensuremath{\formvar{\symfield} \; #1}}
 \newcommand{\exphd}[1]{\ensuremath{\formsym{\symhd} \; #1}}
 \newcommand{\exptl}[1]{\ensuremath{\formsym{\symtl} \; #1}}
-\newcommand{\expnull}[1]{\ensuremath{\formsym{\symnull} \; #1}}
+\newcommand{\expnull}[1]{\ensuremath{\formsym{\sympnull} \; #1}}
 \newcommand{\expwrongs}[2]{\ensuremath{\formsym{\symwrong} \; #1 \; #2}}
 \newcommand{\expwrongd}[1]{\ensuremath{\formsym{\symwrong} \; #1}}
 \newcommand{\exphm}[2]{\ensuremath{\formsym{\symhm} \; #1 \; #2}}
