--- a/model/haskell/typing-rules.tex
+++ b/model/haskell/typing-rules.tex
@@ -67,13 +67,13 @@
 % Variable
 \frac
 {}
-{\judeh{\envexte{\tyvarh}{\vartyh}}{\tyvarh}{\vartyh}}
+{\judeh{\envexte{\varvarh}{\vartyh}}{\varvarh}{\vartyh}}
 \]
 \[
 % Function application
 \frac
 {\judeh{\env}{\first{\varexph}}{\tyfun{\first{\vartyh}}{\second{\vartyh}}} \quad \judeh{\env}{\second{\varexph}}{\first{\vartyh}}}
-{\env\symjudh\expfapp{\first{\varexph}}{\second{\varexph}}:\vartyh_2}
+{\env\symjudh\expfapp{\first{\varexph}}{\second{\varexph}}:\second{\vartyh}}
 \quad
 % Fix
 \frac
