--- a/model/ml/typing-rules.tex
+++ b/model/ml/typing-rules.tex
@@ -67,13 +67,13 @@
 % Variable
 \frac
 {}
-{\judem{\envexte{\tyvarm}{\vartym}}{\tyvarm}{\vartym}}
+{\judem{\envexte{\varvarm}{\vartym}}{\varvarm}{\vartym}}
 \]
 \[
 % Function application
 \frac
 {\judem{\env}{\first{\varexpm}}{\tyfun{\first{\vartym}}{\second{\vartym}}} \quad \judem{\env}{\second{\varexpm}}{\first{\vartym}}}
-{\env\symjudh\expfapp{\first{\varexpm}}{\second{\varexpm}}:\vartym_2}
+{\env\symjudh\expfapp{\first{\varexpm}}{\second{\varexpm}}:\second{\vartym}}
 \quad
 % Fix
 \frac
